# turking-bench

./: .gitignore  README.md  addfiels.py  categories.md  chacklist.txt  folder_names.txt  index.html  index2.html  mturk.html  pyproject.toml  rel_write.py  requirements.txt  sandbox.html  test.txt
data/: file_list.csv  mturk_file_list.csv  token_distance.csv  token_size.csv
gpt/: gpt4v.py
js/: csv_to_html_table.js
rockfish/: collect_field_stats.sh  dump_features.sh  i_can_sleep.sh  ia1_download.sh  ia1_gpt.sh  ia1_ollama.sh  ia1_serve.sh  kxu39_zeroshot_llava.sh  mini_dump_features.sh  ollama_serve.sh  test.sh
src/: 1.run_website.sh  1_ia1_run_website.sh  1_rockfish_run_website.sh  1_run_website.py  1_run_website.sh  2.generate_input_csv.py  3.upload_tasks.py  3_upload_tasks.py  4.get_statistics.py  4.run_evaluation.py  4_run_evaluation.py  5_dump_features.py  TAP_tests.py  TAP_tests_random.py  claude_scores_2024-02-25-09-43-55.json  clean_csv.py  cleanup.py  comprehensive_test.py  config.ini  csv2json.py  csvlist.py  dump_partition.py  evaluate_model.py  evaluation.py  evaluation_class.py  extract.txt  extract_text.py  gpt4-text-vision_1_use-relevant-html_False_test_easy_scores_2024-02-15-15-15-11.csv  gpt4-text-vision_3_use-relevant-html_False_test_easy_scores_2024-02-14-13-19-59.csv  gpt4-text-vision_7_use-relevant-html_False_test_easy_scores_2024-02-15-01-34-28.csv  gpt4-text-vision_7_use-relevant-html_True_test_easy_scores_2024-02-16-00-32-11.csv  gpt4-text-vision_scores_2024-01-28-21-21-34.json  gpt4-text-vision_scores_2024-01-28-22-13-48.json  (+55 more)
(+1072 files in other folders)
